# showcase

./: .coverage  .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  App.tsx  DESIGN.md  Dockerfile  PLAN.md  PLANNING.md  QA.md  README.md  RUNNING.md  SETUP.md  app.py  conftest.py  coverage.xml  database.py  docker-compose.yml  go.mod  index.html  jest.config.ts  main.go  main.py  main_test.go  models.py  package.json  pyproject.toml  requirements.txt  routes.py  schemas.py  seed.py  seed_data.py  server.py  slug.py  storage.py  store.py  tailwind.config.js  test-results.xml  tsconfig.app.json  (+6 more)
app/: __init__.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  routes.py  schemas.py  seed.py  storage.py
backend/: .dockerignore  Dockerfile  SETUP.md  __init__.py  alembic.ini  database.py  init_db.py  main.py  models.py  requirements.txt  routes.py  schemas.py  seed.py
docs/: api-spec.md  architecture.md  db-schema.md  design.md
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  SETUP.md  app.js  docker-compose.yml  index.html  nginx.conf  package.json  style.css  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
mobile/: App.tsx  app.json  babel.config.js  package.json  tsconfig.json
public/: app.js  index.html  styles.css
scripts/: validate_planning.py
spa/: index.html  package.json  tsconfig.json
src/: App.css  App.jsx  App.module.css  App.test.jsx  App.test.tsx  App.tsx  api.ts  app.ts  index.css  index.tsx  main.css  main.jsx  main.test.tsx  main.tsx  server.ts  (+6 more)
(+474 files in other folders)
